# webgrab

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
src/webgrab/: __init__.py  cli.py  config.py  errors.py  models.py
src/webgrab/capture/: __init__.py  browser.py  engine.py  filters.py  processor.py
src/webgrab/filesystem/: __init__.py  sanitizer.py
src/webgrab/mime/: __init__.py  detector.py
src/webgrab/storage/: __init__.py  deduplicator.py  path_resolver.py  saver.py  writer.py
src/webgrab/url/: __init__.py  parser.py
tests/: README.md  __init__.py  conftest.py  test_capture_filters.py  test_filesystem_sanitizer.py  test_mime_detector.py  test_models.py  test_storage.py  test_url_parser.py
