[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webgrab"
version = "0.1.0"
description = "Capture all resources from a webpage like browser DevTools Sources tab"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nicholas Adamou", email = "nicholas.adamou@outlook.com" }
]
keywords = ["web", "scraping", "playwright", "cli", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
webgrab = "webgrab.cli:main"

[project.urls]
Homepage = "https://github.com/dotbrains/webgrab"
Repository = "https://github.com/dotbrains/webgrab"
Issues = "https://github.com/dotbrains/webgrab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/webgrab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
